[package]
name = "alloy"
version = "0.3.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="^1",features=["derive"]}
serde_json = "^1"
http = "^0.2"
failure = {version="^0.1",features=["std"]}
futures = "^0.3"
futures-util = "^0.3"
tokio = { version = "^1.0", features = ["rt","rt-multi-thread","net","sync"] }
tokio-util = {version="^0.6", features=["codec"]}
bytes = "^1.0"
log = {version="^0.4",features=["std"]}