[package]
name = "alloy"
version = "0.5.0"
authors = ["Leo Balduf <leobalduf@gmail.com>"]
edition = "2021"
# We need Rust >=1.65 for backtraces
rust-version = "1.65.0"

[dependencies]
anyhow = {version="^1", features = []}
thiserror = "^1"
log = {version="^0.4",features=["std"]}
chrono = {version="^0.4", features= ["serde"]}

# HTTP, TCP
http = "^0.2"
bytes = "^1.0"

# Async, Tokio
futures = "^0.3"
futures-util = "^0.3"
tokio = { version = "^1.0", features = ["rt","rt-multi-thread","net","sync"] }
tokio-util = {version="^0.7", features=["codec"]}

# Serde
serde = {version="^1",features=["derive"]}
serde_json = "^1"

# AMQP (RabbitMQ)
lapin = { version = "^2", features = ["codegen"] }
